Some PMD code clean up
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk/branches/cdk-1.2.x@12251 eb4e18e3-b210-0410-a6ab-dec725e4b171